automatically backed up by learn

--- a/main.css
+++ b/main.css
@@ -25,6 +25,10 @@ div {
 #green {
   background-color: #00bc3f;
 }
+
+#blue {
+  background-color: #06f;
+}
 #violet {
   background-color: blue;
 }
