automatically backed up by learn

--- a/main.css
+++ b/main.css
@@ -29,6 +29,11 @@ div {
 #blue {
   background-color: #06f;
 }
+
+#indigo {
+  background-color: #8a2be2;
+  
+}
 #violet {
   background-color: blue;
 }
